# celula

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  peticion.txt  vite.config.ts
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: server.ts
backend/src/game/: actions.ts  board.ts  combat.ts  constants.ts  directions.ts  engine.ts  engineRuntime.ts  movement.ts  ordering.ts  scoring.ts  types.ts  validation.ts
docs/: 00-project-overview.md  01-business-rules.md  02-game-flow.md  03-user-function-contract.md  04-data-model.md  05-ui-screens.md  06-test-plan.md  07-agent-instructions.md  08-open-decisions.md  09-existing-ui-integration.md  10-ui-inventory.md  11-demo-code-audit.md  API.md  ARCHITECTURE.md  DECISIONS.md  FLOW.md  OPTIMIZATIONS.md  PROFILING.md  ROADMAP.md  RUST_WASM_ENGINE.md  SPEC.md  TEST_PLAN.md
engine-wasm/: Cargo.toml
engine-wasm/src/: lib.rs
frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
specs/001-battle-cells-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-editor-language-v2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.tsx  types.ts
src/components/: CodeEditor.tsx  ControlBar.tsx  FinalResults.tsx  GameBoard.tsx  LogsPanel.tsx  SidebarStats.tsx
src/engine/: index.ts
src/utils/: interpreter.ts
(+80 files in other folders)
