[package]
name = "battle-cells-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM turn engine for Battle of Cells"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
